--- a/Coffitello/index.html
+++ b/Coffitello/index.html
@@ -4,16 +4,18 @@
     <meta charset="utf-8">
     <title>Coffitello</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/catalog.css">
     <script src="https://kit.fontawesome.com/c4281af7aa.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
       <div class="main-menu">
         <div class="header-left-title">
-          <h1 class="italic-font"><a href="#" onclick="return false;">Coffitello <i class="fa-solid fa-bars fa-xs"></i></a></h1>
+          <h1 class="italic-font"><a href="#" onclick="return false;">Coctaillio <span class="bars-icon"><i class="fa-solid fa-bars fa-xs"></i></span></a></h1>
         </div>
         <nav class="main-navigation">
           <ul class="menu-list hidden">
+            <li id="bar-link"><a>MY BAR</a></li>
             <li id="catalog-link"><a>CATALOG</a></li>
             <li id="create-link"><a>CREATE</a></li>
             <li id="signup-link"><a>SIGN UP</a></li>
@@ -25,6 +27,51 @@
     </header>
     <main id="root">
       <section class="catalog-grid" id="catalog-grid">
+        <a href="#">
+          <div class="catalog-item">
+            <p class="italic-font coctail-title">Coctail</p>
+            <div class="coctail-image">
+              <img src="icons/drink.png" alt="empty-cup">
+            </div>
+            <div class="grid-item-rating">
+              <span class="fa fa-star checked" aria-hidden="true"></span>
+              <span class="fa fa-star" aria-hidden="true"></span>
+              <span class="fa fa-star" aria-hidden="true"></span>
+              <span class="fa fa-star" aria-hidden="true"></span>
+              <span class="fa fa-star" aria-hidden="true"></span>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="catalog-item">
+            <p class="italic-font coctail-title">Coctail</p>
+            <div class="coctail-image">
+              <img src="icons/drink.png" alt="empty-cup">
+            </div>
+            <div class="grid-item-rating">
+              <span class="fa fa-star checked" aria-hidden="true"></span>
+              <span class="fa fa-star" aria-hidden="true"></span>
+              <span class="fa fa-star" aria-hidden="true"></span>
+              <span class="fa fa-star" aria-hidden="true"></span>
+              <span class="fa fa-star" aria-hidden="true"></span>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="catalog-item">
+            <p class="italic-font coctail-title">Coctail</p>
+            <div class="coctail-image">
+              <img src="icons/drink.png" alt="empty-cup">
+            </div>
+            <div class="grid-item-rating">
+              <span class="fa fa-star checked" aria-hidden="true"></span>
+              <span class="fa fa-star" aria-hidden="true"></span>
+              <span class="fa fa-star" aria-hidden="true"></span>
+              <span class="fa fa-star" aria-hidden="true"></span>
+              <span class="fa fa-star" aria-hidden="true"></span>
+            </div>
+          </div>
+        </a>
       </section>
     </main>
     <footer>
