Added routing. Deleted html files for each page

--- a/Coffitello/index.html
+++ b/Coffitello/index.html
@@ -2,9 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Coffitello</title>
+    <title>Coctaillio</title>
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/catalog.css">
+    <link rel="stylesheet" href="styles/catalog.css">  
+    <script defer type="module" src="scripts/router.js"></script>
+    <script defer type="module" src="scripts/main.js"></script>
     <script src="https://kit.fontawesome.com/c4281af7aa.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -26,53 +28,6 @@
       </div>
     </header>
     <main id="root">
-      <section class="catalog-grid" id="catalog-grid">
-        <a href="#">
-          <div class="catalog-item">
-            <h2 class="italic-font coctail-title">Coctail</h2>
-            <div class="coctail-image">
-              <img src="icons/drink.png" alt="empty-cup">
-            </div>
-            <div class="grid-item-rating">
-              <span class="fa fa-star checked" aria-hidden="true"></span>
-              <span class="fa fa-star" aria-hidden="true"></span>
-              <span class="fa fa-star" aria-hidden="true"></span>
-              <span class="fa fa-star" aria-hidden="true"></span>
-              <span class="fa fa-star" aria-hidden="true"></span>
-            </div>
-          </div>
-        </a>
-        <a href="#">
-          <div class="catalog-item">
-            <h2 class="italic-font coctail-title">Coctail</h2>
-            <div class="coctail-image">
-              <img src="icons/drink.png" alt="empty-cup">
-            </div>
-            <div class="grid-item-rating">
-              <span class="fa fa-star checked" aria-hidden="true"></span>
-              <span class="fa fa-star" aria-hidden="true"></span>
-              <span class="fa fa-star" aria-hidden="true"></span>
-              <span class="fa fa-star" aria-hidden="true"></span>
-              <span class="fa fa-star" aria-hidden="true"></span>
-            </div>
-          </div>
-        </a>
-        <a href="#">
-          <div class="catalog-item">
-            <h2 class="italic-font coctail-title">Coctail</h2>
-            <div class="coctail-image">
-              <img src="icons/drink.png" alt="empty-cup">
-            </div>
-            <div class="grid-item-rating">
-              <span class="fa fa-star checked" aria-hidden="true"></span>
-              <span class="fa fa-star" aria-hidden="true"></span>
-              <span class="fa fa-star" aria-hidden="true"></span>
-              <span class="fa fa-star" aria-hidden="true"></span>
-              <span class="fa fa-star" aria-hidden="true"></span>
-            </div>
-          </div>
-        </a>
-      </section>
     </main>
     <footer>
       <p class="copyright">Copyright @ 2022. Created by Anatoli Hancharou </p>
