Fixed UI issues

--- a/Coffitello/favorite.html
+++ b/Coffitello/favorite.html
@@ -31,7 +31,7 @@
           <li class="favorites-list-item">
             <a href="#">
               <div class="favorite-wrapper">
-                <button type="button" id="mark-favourite-btn"></button>
+                <button type="button" class="mark-favourite-btn"></button>
                 <div class="coctail-image-block">
                   <img src="icons/drink.png" alt="coctail cup">
                 </div>
@@ -45,7 +45,7 @@
           <li class="favorites-list-item">
             <a href="#">
               <div class="favorite-wrapper">
-                <button type="button" id="mark-favourite-btn"></button>
+                <button type="button" class="mark-favourite-btn"></button>
                 <div class="coctail-image-block">
                   <img src="icons/drink.png" alt="coctail cup">
                 </div>
