--- a/Coffitello/index.html
+++ b/Coffitello/index.html
@@ -29,7 +29,7 @@
       <section class="catalog-grid" id="catalog-grid">
         <a href="#">
           <div class="catalog-item">
-            <p class="italic-font coctail-title">Coctail</p>
+            <h2 class="italic-font coctail-title">Coctail</h2>
             <div class="coctail-image">
               <img src="icons/drink.png" alt="empty-cup">
             </div>
@@ -44,7 +44,7 @@
         </a>
         <a href="#">
           <div class="catalog-item">
-            <p class="italic-font coctail-title">Coctail</p>
+            <h2 class="italic-font coctail-title">Coctail</h2>
             <div class="coctail-image">
               <img src="icons/drink.png" alt="empty-cup">
             </div>
@@ -59,7 +59,7 @@
         </a>
         <a href="#">
           <div class="catalog-item">
-            <p class="italic-font coctail-title">Coctail</p>
+            <h2 class="italic-font coctail-title">Coctail</h2>
             <div class="coctail-image">
               <img src="icons/drink.png" alt="empty-cup">
             </div>
