--- a/Coffitello/create.html
+++ b/Coffitello/create.html
@@ -47,24 +47,24 @@
           </div>
         </div>
         <div class="choose-ingredients-block">
-          <div class="choose-block" id="choose-category-block">
+          <div class="choose-block choose-category-block">
             <ul class="choose-category-list">
-              <li class="list-item choose-category-list-item"><a>Wines & Champagnes</a></li>
-              <li class="list-item choose-category-list-item"><a>Juices</a></li>
-              <li class="list-item choose-category-list-item"><a>Sodas</a></li>
-              <li class="list-item choose-category-list-item"><a>Liqueurs</a></li>
+              <li class="list-item choose-category-list-item"><span>Wines & Champagnes</span></li>
+              <li class="list-item choose-category-list-item"><span>Juices</span></li>
+              <li class="list-item choose-category-list-item"><span>Sodas</span></li>
+              <li class="list-item choose-category-list-item"><span>Liqueurs</span></li>
             </ul>
           </div>
-          <div class="choose-block" id="choose-ingredient-block">
+          <div class="choose-block choose-ingredient-block">
             <ul class="choose-ingredient-list">
-              <li class="list-item choose-ingredient-list-item"><a>Red wine</a></li>
-              <li class="list-item choose-ingredient-list-item"><a>White wine</a></li>
-              <li class="list-item choose-ingredient-list-item"><a>Rose wine</a></li>
-              <li class="list-item choose-ingredient-list-item"><a>Champagne</a></li>
-              <li class="list-item choose-ingredient-list-item"><a>Rose Champagne</a></li>
+              <li class="list-item choose-ingredient-list-item"><span>Red wine</span></li>
+              <li class="list-item choose-ingredient-list-item"><span>White wine</span></li>
+              <li class="list-item choose-ingredient-list-item"><span>Rose wine</span></li>
+              <li class="list-item choose-ingredient-list-item"><span>Champagne</span></li>
+              <li class="list-item choose-ingredient-list-item"><span>Rose Champagne</span></li>
             </ul>
           </div>
-          <div class="choose-block" id="ingredients-values-block">
+          <div class="choose-block ingredients-values-block">
             <ul class="ingredients-values-list">
               <li class="list-item value-list-item">Red wine
                   <input type="number" name="ingredient-value" class="ingredient-value" placeholder="%" min="0" max="100">
