--- a/Coffitello/register.html
+++ b/Coffitello/register.html
@@ -27,7 +27,7 @@
     </header>
     <main id="root">
       <section class="login-form">
-        <h2>Login</h2>
+        <h2>Registration</h2>
         <form action="">
           <div class="login-block">
             <div class="input-field">
@@ -37,14 +37,10 @@
               <input type="password" placeholder="Enter Password" name="password" id="password" required>
             </div>
             <div class="actions">
-              <button type="submit" id="login-btn">Login</button>
+              <button type="submit" id="register-btn">Register</button>
             </div>
           </div>
         </form>
-        <div id="context-switch">
-          <p>Don't have an account?</p>
-          <a id="switch-link" href="">Register</a>
-        </div>
       </section>
     </main>
     <footer>
