Added sweatalert2 notifications. Fixed register button style. Minor fixes.

--- a/Coffitello/index.html
+++ b/Coffitello/index.html
@@ -4,21 +4,10 @@
     <meta charset="utf-8">
     <title>Coctaillio</title>
     <link rel="stylesheet" href="styles/main.css">
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/9.6.10/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/9.6.10/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/9.6.10/firebase-database-compat.js"></script> 
-    <script defer src="/__/firebase/9.6.10/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/9.6.10/firebase-storage-compat.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-
     <script defer type="module" src="scripts/firebaseInit.js"></script>
-    <script defer type="module" src="scripts/main.js"></script>
+    <script defer src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script defer type="module" src="services/alert.js"></script>
+    <script defer type="module" src="scripts/main.js"></script> 
     <script src="https://kit.fontawesome.com/c4281af7aa.js" crossorigin="anonymous"></script>
   </head>
   <body>
