Added a feature of switching app theme: dark and light. Added cookies support for storing app mode

--- a/Coffitello/index.html
+++ b/Coffitello/index.html
@@ -32,6 +32,7 @@
     </main>
     <footer>
       <p class="copyright">Copyright @ 2022. Created by Anatoli Hancharou </p>
+      <a><div id="switch-theme" class="light"><i class="light-mode fa-solid fa-moon"></i></div></a>
     </footer>
   </body>
 </html>
