Changed menu bar capitalization

--- a/Coffitello/index.html
+++ b/Coffitello/index.html
@@ -18,12 +18,12 @@
         </div>
         <nav class="main-navigation">
           <ul class="menu-list hidden">
-            <li id="bar-link"><a>MY BAR</a></li>
-            <li id="catalog-link"><a>CATALOG</a></li>
-            <li id="create-link"><a>CREATE</a></li>
-            <li id="signup-link"><a>SIGN UP</a></li>
-            <li id="login-link"><a>LOG IN</a></li>
-            <li id="logout-link"><a>LOG OUT</a></li>
+            <li id="bar-link"><a>My bar</a></li>
+            <li id="catalog-link"><a>Catalog</a></li>
+            <li id="create-link"><a>Create</a></li>
+            <li id="signup-link"><a>Sign up</a></li>
+            <li id="login-link"><a>Log in</a></li>
+            <li id="logout-link"><a>Log out</a></li>
           </ul>
         </nav>
       </div>
